--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -73,6 +73,8 @@ admin.option_hint=The Product Option Manager allows for the management of differ
 admin.product=Product Manager
 admin.product.create=Create New Product
 admin.product.createproducttype=Create Product Type
+admin.product.delete=Delete Product
+admin.product.delete_confirm=Are you sure you want to delete this product?
 admin.product.deleteproducttype=Delete Product Type
 admin.product.deleteproducttype_confirm=Are you sure you want to delete this product type?
 admin.product.deleteproducttype_disabled=This product type cannot be deleted because it has been assigned to a product and/or it has subtypes which must be moved or deleted first.
@@ -82,12 +84,20 @@ admin.product.detail=Product Detail
 admin.product.edit=Edit Product
 admin.product.editproducttype=Edit Product Type
 admin.product.list=View All Products
-admin.product.listproducttypes=Product Type List
+admin.product.listproducttypes=View Product Types
+admin.product.productdetails=Product Details
 admin.product.producttypes=Product Types
+admin.product.productsettings=Product Settings
+admin.product.save=Save Product
+admin.product.save_nav=Save
 admin.product.saveproducttype=Save Product Type
 admin.product.saveproducttype_confirm=If you are adding a subtype or moving to a new parent type, all products in the new parent will be re-assigned to the new subtype. Continue?
 admin.product.saveproducttype_nav=Save
 admin.product.saveproducttype_success=The Product Type was successfully saved
+admin.product.selectbrand=Select Brand
+admin.product.selectoptions=Select Options
+admin.product.selectparentproducttype=Select
+admin.product.selectproducttype=Select Product Type
 admin.setting=Settings Manager
 admin.setting.dashboard=Settings Manager
 admin.setting.detail=Global Settings
@@ -95,7 +105,6 @@ admin.setting.edit=Edit Global Settings
 admin.setting.editpermissions=User Permissions
 admin.vendor=Vendor Manager
 admin.vendor.dashboard=Vendor Dashboard
-cvalidator.reditcardnumber={objectValue} is an invalid credit card number.
 entity.account.accountEmails=Account Emails
 entity.account.accountID=Account ID
 entity.account.company=Company
@@ -269,6 +278,7 @@ entity.product.manufactureDiscontinued=Manufacture Discounted
 entity.product.nonInventory=Non-Inventory Item
 entity.product.onClearanceSale=onClearanceSale
 entity.product.onTermSale=onTermSale
+entity.product.options=Product Options
 entity.product.originalPrice=originalPrice
 entity.product.productCode=Product Code
 entity.product.productDescription=Product Description
@@ -276,11 +286,15 @@ entity.product.productID=productID
 entity.product.productName=Product Name
 entity.product.productType=Product Type
 entity.product.productYear=Product Year
-entity.product.publishedWeight=publishedWeight
-entity.product.qc=qc
+entity.product.productYear_title=Year
+entity.product.publishedWeight=Published Weight
+entity.product.qc=QC
+entity.product.qea=QEA
+entity.product.qia=QIA
 entity.product.qexp=qexp
-entity.product.qoh=qoh
-entity.product.shippingWeight=shippingWeight
+entity.product.qoh=QOH
+entity.product.qoo=QOO
+entity.product.shippingWeight=Shipping Weight
 entity.product.showOnWeb=Show On Web Retail
 entity.product.showOnWebWholesale=Show On Web Wholesale
 entity.product.skus=skus
@@ -440,6 +454,7 @@ validator.assertfalse=assertion failed
 validator.asserttrue=assertion failed
 validator.binary={objectValue} is not a valid binary value.
 validator.boolean={objectValue} is not a valid boolean value.
+validator.creditcardnumber={objectValue} is an invalid credit card number.
 validator.date={objectValue} is an invalid date.
 validator.email={objectValue} is an invalid email address.
 validator.future={objectValue} must be a future date.
