Made some adjustments for front end rendering of views

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,26 +1,26 @@
 #Created by JInto - www.guh-software.de
-#Mon Feb 21 20:46:15 PST 2011
+#Mon Feb 28 13:42:11 PST 2011
 admin.account=Account Manager
 admin.account.detail=Account Detail
 admin.account.list=Account Listing
 admin.account.list_hint=The Account Listing shows a grid of all accounts in the system.
 admin.brand=Brand Manager
 admin.brand.create=Add Brand
+admin.brand.delete=Delete Brand
+admin.brand.delete_confirm=Are you sure you want to delete this brand?
+admin.brand.delete_disabled=Brand cannot be deleted because it has been assigned to products
+admin.brand.delete_isassigned=Brand cannot be deleted because it has been assigned to products
+admin.brand.delete_nav=Delete
+admin.brand.delete_success=Brand was deleted successfully
 admin.brand.detail=Brand Detail
 admin.brand.detail_hint=View the Info page of a given Brand
 admin.brand.detail_permission=View Brand Info
 admin.brand.edit=Edit Brand
 admin.brand.list=Brand Listing
-admin.brand.delete=Delete Brand
-admin.brand.delete_disabled=Brand cannot be deleted because it has been assigned to products
-admin.brand.delete_nav=Delete
-admin.brand.delete_success=Brand was deleted successfully
-admin.brand.delete_isassigned=Brand cannot be deleted because it has been assigned to products
-admin.brand.delete_confirm=Are you sure you want to delete this brand?
+admin.brand.nobrandsdefined=There are currently no product brands defined.
 admin.brand.save=Save Brand
 admin.brand.save_nav=Save
 admin.brand.save_success=Brand was saved successfully
-admin.brand.nobrandsdefined=There are currently no product brands defined.
 admin.help=Help
 admin.help.about=About Slatwall
 admin.main=Dashboard
@@ -42,11 +42,6 @@ admin.option.deleteoptiongroup_disabled=This option group cannot be deleted beca
 admin.option.deleteoptiongroup_success=The option group was successfully deleted.
 admin.option.detailoptiongroup=Option Group Details
 admin.option.edit=Edit Option Group
-admin.option.removeimage=Remove Current Image
-admin.option.saveoption=Save Option
-admin.option.saveoption_nav=Save
-admin.option.saveoptiongroup=Save Option Group
-admin.option.saveoptiongroup_nav=Save
 admin.option.editoption=Manage Option Group
 admin.option.editoptiongroup=Edit Option Group
 admin.option.edittoggle.showhide=Show,Hide
@@ -61,9 +56,14 @@ admin.option.optiongroup=Option Group
 admin.option.optiongroupfilter=Option Group Filter
 admin.option.optionlist=Option List
 admin.option.options=Options
+admin.option.removeimage=Remove Current Image
 admin.option.removeoption=Remove Option
 admin.option.reorder=Reorder
 admin.option.save=Save
+admin.option.saveoption=Save Option
+admin.option.saveoption_nav=Save
+admin.option.saveoptiongroup=Save Option Group
+admin.option.saveoptiongroup_nav=Save
 admin.option.saveoptiongroup_success=The Option Group was saved successfully
 admin.option.saveorder=Save Order
 admin.option.selectoptiongroupimage=Select Associated Option Group Image to Upload (optional)
@@ -71,23 +71,23 @@ admin.option.show=Show
 admin.option.showall=All
 admin.option_hint=The Product Option Manager allows for the management of different groups of options surounding Product.  For example things like Size and Color are Product Options
 admin.product=Product Manager
-admin.product.createproducttype=Create Product Type
 admin.product.create=Create New Product
+admin.product.createproducttype=Create Product Type
 admin.product.deleteproducttype=Delete Product Type
-admin.product.deleteproducttype_nav=Delete
 admin.product.deleteproducttype_confirm=Are you sure you want to delete this product type?
 admin.product.deleteproducttype_disabled=This product type cannot be deleted because it has been assigned to a product and/or it has subtypes which must be moved or deleted first.
+admin.product.deleteproducttype_nav=Delete
 admin.product.deleteproducttype_success=The Product Type was sucessfully deleted
 admin.product.detail=Product Detail
 admin.product.edit=Edit Product
 admin.product.editproducttype=Edit Product Type
+admin.product.list=View All Products
+admin.product.listproducttypes=Product Type List
+admin.product.producttypes=Product Types
 admin.product.saveproducttype=Save Product Type
 admin.product.saveproducttype_confirm=If you are adding a subtype or moving to a new parent type, all products in the new parent will be re-assigned to the new subtype. Continue?
 admin.product.saveproducttype_nav=Save
 admin.product.saveproducttype_success=The Product Type was successfully saved
-admin.product.list=View All Products
-admin.product.listproducttypes=Product Type List
-admin.product.producttypes=Product Types
 admin.setting=Settings Manager
 admin.setting.dashboard=Settings Manager
 admin.setting.detail=Global Settings
@@ -95,6 +95,7 @@ admin.setting.edit=Edit Global Settings
 admin.setting.editpermissions=User Permissions
 admin.vendor=Vendor Manager
 admin.vendor.dashboard=Vendor Dashboard
+cvalidator.reditcardnumber={objectValue} is an invalid credit card number.
 entity.account.accountEmails=Account Emails
 entity.account.accountID=Account ID
 entity.account.company=Company
@@ -433,12 +434,12 @@ entity.vendorskustock.quantity=quantity
 entity.vendorskustock.sku=sku
 entity.vendorskustock.vendor=vendor
 entity.vendorskustock.vendorSkuStockID=vendorSkuStockID
+frontend.account.detail=My Account
+validator.array={objectValue} is an invalid array.
 validator.assertfalse=assertion failed
 validator.asserttrue=assertion failed
-validator.array={objectValue} is an invalid array.
 validator.binary={objectValue} is not a valid binary value.
 validator.boolean={objectValue} is not a valid boolean value.
-cvalidator.reditcardnumber={objectValue} is an invalid credit card number.
 validator.date={objectValue} is an invalid date.
 validator.email={objectValue} is an invalid email address.
 validator.future={objectValue} must be a future date.
@@ -449,23 +450,23 @@ validator.ismatch=The value for {objectLabel} is not the same as {ismatch}.
 validator.lowercase={objectValue} must be lower case.
 validator.max={objectValue} must be less than or equal to {max}.
 validator.min={objectValue} must be greater than or equal to {min}.
-validator.notnull=The field {objectLabel} must not be a null value.
 validator.notempty=The field {objectLabel} must contain a value.
-validator.required=The field {objectLabel} is required.
 validator.notinlist=The value for {objectLabel} is in the list {list} and should not be.
+validator.notnull=The field {objectLabel} must not be a null value.
 validator.numeric={objectLabel} is not a valid numeric value.
-validator.query={objectValue} is an invalid query.
 validator.password={objectValue} is not a valid password.
 validator.past={objectValue} must be a past date.
 validator.pattern=.
 validator.phone={objectValue} is an invalid phone number.
+validator.query={objectValue} is an invalid query.
 validator.range={objectValue} does not fall between the range of {min} - {max}.
 validator.regex={objectValue} is an invalid regex.
+validator.required=The field {objectLabel} is required.
+validator.size={objectValue} does not fall between the size {min} - {max}.
 validator.ssn={objectValue} is an invalid social security number.
 validator.string={objectValue} is an invalid string.
 validator.struct={objectValue} is an invalid struct.
-validator.size={objectValue} does not fall between the size {min} - {max}.
-validator.url={objectValue} is an invalid URL.
 validator.uppercase={objectValue} must be upper case.
+validator.url={objectValue} is an invalid URL.
 validator.uuid={objectValue} is an invalid UUID.
 validator.zipCode={objectValue} is an invalid zip code.
