Fix product type display.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -161,6 +161,7 @@ entity.attributevalue.profile=profile
 entity.baseentity.errorBean=errorBean
 entity.baseentity.searchScore=searchScore
 entity.baseentity.updateKeys=updateKeys
+entity.brand=Brand
 entity.brand.brandID=brandID
 entity.brand.brandName=Brand Name
 entity.brand.brandVendors=brandVendors
