Implemented association of products with categories (mura content) in product.create

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -71,6 +71,9 @@ admin.option.show=Show
 admin.option.showall=All
 admin.option_hint=The Product Option Manager allows for the management of different groups of options surounding Product.  For example things like Size and Color are Product Options
 admin.product=Product Manager
+admin.product.altimages=Alternate Images
+admin.product.attributes=Custom Attributes
+admin.product.categories=Categories
 admin.product.create=Create New Product
 admin.product.createproducttype=Create Product Type
 admin.product.delete=Delete Product
@@ -85,6 +88,7 @@ admin.product.edit=Edit Product
 admin.product.editproducttype=Edit Product Type
 admin.product.list=View All Products
 admin.product.listproducttypes=View Product Types
+admin.product.pricing=Pricing Info
 admin.product.productdetails=Product Details
 admin.product.producttypes=Product Types
 admin.product.productsettings=Product Settings
@@ -97,7 +101,9 @@ admin.product.saveproducttype_success=The Product Type was successfully saved
 admin.product.selectbrand=Select Brand
 admin.product.selectoptions=Select Options
 admin.product.selectparentproducttype=Select
+admin.product.selectproductcategories=Select Product Categories for Frontend Display
 admin.product.selectproducttype=Select Product Type
+admin.product.showbasicinfo=Show Basic Product Info
 admin.setting=Settings Manager
 admin.setting.dashboard=Settings Manager
 admin.setting.detail=Global Settings
@@ -366,9 +372,9 @@ entity.shippingzonelocation.postalCode=postalCode
 entity.shippingzonelocation.shippingZone=shippingZone
 entity.shippingzonelocation.shippingZoneLocationID=shippingZoneLocationID
 entity.shippingzonelocation.state=state
-entity.sku.listPrice=listPrice
+entity.sku.listPrice=List Price
 entity.sku.livePrice=livePrice
-entity.sku.price=price
+entity.sku.price=Price
 entity.sku.product=product
 entity.sku.qc=qc
 entity.sku.qexp=qexp
