Added some more frontend support to the product display, and added a preview buttom for products in the admin.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Mon Feb 28 13:42:11 PST 2011
+#Thu Mar 03 16:06:22 PST 2011
 admin.account=Account Manager
 admin.account.detail=Account Detail
 admin.account.list=Account Listing
@@ -90,8 +90,8 @@ admin.product.list=View All Products
 admin.product.listproducttypes=View Product Types
 admin.product.pricing=Pricing Info
 admin.product.productdetails=Product Details
-admin.product.producttypes=Product Types
 admin.product.productsettings=Product Settings
+admin.product.producttypes=Product Types
 admin.product.save=Save Product
 admin.product.save_nav=Save
 admin.product.saveproducttype=Save Product Type
@@ -297,8 +297,8 @@ entity.product.productYear_title=Year
 entity.product.publishedWeight=Published Weight
 entity.product.qc=QC
 entity.product.qea=QEA
-entity.product.qia=QIA
 entity.product.qexp=qexp
+entity.product.qia=QIA
 entity.product.qoh=QOH
 entity.product.qoo=QOO
 entity.product.shippingWeight=Shipping Weight
@@ -456,6 +456,7 @@ entity.vendorskustock.sku=sku
 entity.vendorskustock.vendor=vendor
 entity.vendorskustock.vendorSkuStockID=vendorSkuStockID
 frontend.account.detail=My Account
+frontend.account.edit=Edit Account
 validator.array={objectValue} is an invalid array.
 validator.assertfalse=assertion failed
 validator.asserttrue=assertion failed
