Updated option groups to set as product image groups

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Thu Mar 03 16:06:22 PST 2011
+#Wed Mar 09 17:12:29 PST 2011
 admin.account=Account Manager
 admin.account.detail=Account Detail
 admin.account.list=Account Listing
@@ -213,6 +213,8 @@ entity.option.optionImage=Option Image
 entity.option.optionImage_hint=Select Associated Option Image to Upload (optional)
 entity.option.optionName=Option Name
 entity.option.sortOrder=Sort Order
+entity.optiongroup.isImageGroup=Product Image Group
+entity.optiongroup.isImageGroup_hint=If this is selected, then any product with options from this group will have different images
 entity.optiongroup.optionGroupDescription=Option Group Description
 entity.optiongroup.optionGroupID=Option Group ID
 entity.optiongroup.optionGroupImage=Option Group Image
