fixed Product-Content association on product save plus other minor fixes.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -89,6 +89,7 @@ admin.product.edit=Edit Product
 admin.product.editproducttype=Edit Product Type
 admin.product.list=View All Products
 admin.product.listproducttypes=View Product Types
+admin.product.noproducttypesdefined=No Product Types have been defined in the Site Manager
 admin.product.noproductpagesdefined=No Product Pages have been defined in the Site Manager
 admin.product.productdetails=Product Details
 admin.product.productoptions=Product Options
