Added default product settings to Global settings and updated settings page to use resource bundles.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -114,6 +114,8 @@ admin.setting.dashboard=Settings Manager
 admin.setting.detail=Global Settings
 admin.setting.edit=Edit Global Settings
 admin.setting.editpermissions=User Permissions
+admin.setting.save=Save Settings
+admin.setting.save_nav=Save
 admin.vendor=Vendor Manager
 admin.vendor.dashboard=Vendor Dashboard
 entity.account.accountEmails=Account Emails
@@ -465,6 +467,25 @@ entity.vendorskustock.vendor=vendor
 entity.vendorskustock.vendorSkuStockID=vendorSkuStockID
 frontend.account.detail=My Account
 frontend.account.edit=Edit Account
+setting=Setting
+setting.account=Account
+setting.order=Order
+setting.order.newOrderNotifyFrom=New Order Notification Email From
+setting.order.newOrderNotifyTo=New Order Notification Email To
+setting.product=Product
+setting.product.allowBackorder=Products can be Backordered
+setting.product.allowDropship=Products can be dropshipped
+setting.product.allowPreorder=Products can be Preordered
+setting.product.allowShipping=Products can be shipped.
+setting.product.callToOrder=Allow Orders by Phone
+setting.product.defaultProductTemplate=Default Product Template
+setting.product.manufactureDiscontinued=Discontinued by Manufacturer
+setting.product.nonInventory=Non-inventory Item
+setting.product.showOnWeb=Sold on Retail Website
+setting.product.showOnWebWholesale=Sold on Wholesale Website
+setting.product.trackInventory=Track Inventory
+setting.product.urlKey=URL Key
+setting.value=Value
 validator.array={objectValue} is an invalid array.
 validator.assertfalse=assertion failed
 validator.asserttrue=assertion failed
