Changed productType.productType property to productType.productTypeName for consistency and refactored productType.save

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Wed Mar 09 17:12:29 PST 2011
+#Wed Mar 19 17:12:29 PST 2011
 admin.account=Account Manager
 admin.account.detail=Account Detail
 admin.account.list=Account Listing
@@ -329,7 +329,7 @@ entity.productrelationship.relatedProduct=relatedProduct
 entity.productrelationship.relationshipType=relationshipType
 entity.producttype.Products=Products
 entity.producttype.parentProductType=Parent Product Type
-entity.producttype.productType=Product Type
+entity.producttype.productTypeName=Product Type Name
 entity.producttype.productTypeID=productTypeID
 entity.producttype.subProductTypes=subProductTypes
 entity.profile.account=account
