--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -60,6 +60,7 @@ admin.option.removeimage=Remove Current Image
 admin.option.removeoption=Remove Option
 admin.option.reorder=Reorder
 admin.option.save=Save
+admin.option.save_success=The Option was saved successfully.
 admin.option.saveoption=Save Option
 admin.option.saveoption_nav=Save
 admin.option.saveoptiongroup=Save Option Group
@@ -80,6 +81,7 @@ admin.product.createproducttype=Add Product Type
 admin.product.delete=Delete Product
 admin.product.delete_confirm=Are you sure you want to delete this product?
 admin.product.delete_nav=Delete
+admin.product.delete_success=The Product was successfully deleted.
 admin.product.deleteproducttype=Delete Product Type
 admin.product.deleteproducttype_confirm=Are you sure you want to delete this product type?
 admin.product.deleteproducttype_disabled=This product type cannot be deleted because it has been assigned to a product and/or it has subtypes which must be moved or deleted first.
