Added product type detail/edit page with settings.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -26,6 +26,7 @@ admin.help.about=About Slatwall
 admin.main=Dashboard
 admin.main.dashboard=Dashboard
 admin.nav.back=Go Back
+admin.none=None
 admin.option=Product Option Manager
 admin.option.addoption=Add Option
 admin.option.closeform=Close
@@ -88,6 +89,7 @@ admin.product.deleteproducttype_disabled=This product type cannot be deleted bec
 admin.product.deleteproducttype_nav=Delete
 admin.product.deleteproducttype_success=The Product Type was sucessfully deleted
 admin.product.detail=Product Detail
+admin.product.detailproducttype=Product Type Details
 admin.product.edit=Edit Product
 admin.product.editproducttype=Edit Product Type
 admin.product.list=View All Products
