Added "Add to Cart" functionality that now works.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Wed Mar 19 17:12:29 PST 2011
+#Mon Mar 21 15:58:33 PDT 2011
 admin.account=Account Manager
 admin.account.detail=Account Detail
 admin.account.list=Account Listing
@@ -92,8 +92,8 @@ admin.product.edit=Edit Product
 admin.product.editproducttype=Edit Product Type
 admin.product.list=View All Products
 admin.product.listproducttypes=View Product Types
-admin.product.noproducttypesdefined=No Product Types have been defined in the Site Manager
 admin.product.noproductpagesdefined=No Product Pages have been defined in the Site Manager
+admin.product.noproducttypesdefined=No Product Types have been defined in the Site Manager
 admin.product.productdetails=Product Details
 admin.product.productoptions=Product Options
 admin.product.productpages=Product Pages
@@ -331,8 +331,8 @@ entity.productrelationship.relatedProduct=relatedProduct
 entity.productrelationship.relationshipType=relationshipType
 entity.producttype.Products=Products
 entity.producttype.parentProductType=Parent Product Type
-entity.producttype.productTypeName=Product Type Name
 entity.producttype.productTypeID=productTypeID
+entity.producttype.productTypeName=Product Type Name
 entity.producttype.subProductTypes=subProductTypes
 entity.profile.account=account
 entity.profile.profileID=profileID
@@ -469,6 +469,8 @@ entity.vendorskustock.vendor=vendor
 entity.vendorskustock.vendorSkuStockID=vendorSkuStockID
 frontend.account.detail=My Account
 frontend.account.edit=Edit Account
+frontend.cart.detail=Shopping Cart
+frontend.cart.detail.noitems=There are currently no items in your cart.
 setting=Setting
 setting.account=Account
 setting.order=Order
