Changed redirect() to setView() after failed validation on save in entities. Changed 'cancel' buttons to true links instead of javascript 'back'

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Wed Mar 19 17:12:29 PST 2011
+#Wed Mar 26 12:26:29 PST 2011
 admin.account=Account Manager
 admin.account.detail=Account Detail
 admin.account.list=Account Listing
@@ -104,6 +104,7 @@ admin.product.producttypes=Product Types
 admin.product.producttypesettings=Product Type Settings
 admin.product.save=Save Product
 admin.product.save_nav=Save
+admin.product.save_success=The Product was successfully saved
 admin.product.saveproducttype=Save Product Type
 admin.product.saveproducttype_confirm=If you are adding a subtype or moving to a new parent type, all products in the new parent will be re-assigned to the new subtype. Continue?
 admin.product.saveproducttype_nav=Save
