Added ability to delete skus and edit Sku codes and prices from product edit page.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -86,7 +86,15 @@ admin.product.deleteproducttype_confirm=Are you sure you want to delete this pro
 admin.product.deleteproducttype_disabled=This product type cannot be deleted because it has been assigned to a product and/or it has subtypes which must be moved or deleted first.
 admin.product.deleteproducttype_nav=Delete
 admin.product.deleteproducttype_success=The Product Type was sucessfully deleted
+admin.product.deletesku_confirm=Are you sure you want to delete this SKU?
 admin.product.detail=Product Detail
+admin.product.detail.tab.skus=SKUs
+admin.product.detail.tab.webdescription=Web Description
+admin.product.detail.tab.productdetails=Product Details
+admin.product.detail.tab.productsettings=Product Settings
+admin.product.detail.tab.productpages=Product Pages
+admin.product.detail.tab.customattributes=Custom Attributes
+admin.product.detail.tab.alternateimages=Alternate Images
 admin.product.detailproducttype=Product Type Details
 admin.product.edit=Edit Product
 admin.product.editproducttype=Edit Product Type
@@ -402,13 +410,20 @@ entity.shippingzonelocation.postalCode=postalCode
 entity.shippingzonelocation.shippingZone=shippingZone
 entity.shippingzonelocation.shippingZoneLocationID=shippingZoneLocationID
 entity.shippingzonelocation.state=state
+entity.sku.delete_success=The SKU was deleted successfully.
+entity.sku.delete_validateonesku=The SKU cannot be deleted because each product must have at least one SKU.
+entity.sku.imagePath=Image Path
+entity.sku.isDefault=Default
 entity.sku.listPrice=List Price
-entity.sku.livePrice=livePrice
+entity.sku.livePrice=Live Price
 entity.sku.price=Price
 entity.sku.product=product
-entity.sku.qc=qc
-entity.sku.qexp=qexp
-entity.sku.qoh=qoh
+entity.sku.qc=QC
+entity.sku.qea=QEA
+entity.sku.qexp=QEXP
+entity.sku.qia=QIA
+entity.sku.qoh=QOH
+entity.sku.skuCode=SKU Code
 entity.sku.skuID=skuID
 entity.sku.stocks=stocks
 entity.sku.webQC=webQC
