Added some additional views for checkout.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -482,6 +482,7 @@ entity.vendorskustock.vendor=vendor
 entity.vendorskustock.vendorSkuStockID=vendorSkuStockID
 frontend.account.detail=My Account
 frontend.account.edit=Edit Account
+frontend.checkout.detail=Checkout
 setting=Setting
 setting.account=Account
 setting.inherit=Inherit
