Implemented the ResponseBean for entity delete validations and messages.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -8,8 +8,6 @@ admin.brand=Brand Manager
 admin.brand.create=Add Brand
 admin.brand.delete=Delete Brand
 admin.brand.delete_confirm=Are you sure you want to delete this brand?
-admin.brand.delete_disabled=Brand cannot be deleted because it has been assigned to products
-admin.brand.delete_isassigned=Brand cannot be deleted because it has been assigned to products
 admin.brand.delete_nav=Delete
 admin.brand.delete_success=Brand was deleted successfully
 admin.brand.detail=Brand Detail
@@ -185,6 +183,7 @@ entity.brand.brandID=brandID
 entity.brand.brandName=Brand Name
 entity.brand.brandVendors=brandVendors
 entity.brand.brandWebsite=Brand Website
+entity.brand.delete_Validateisassigned=Brand cannot be deleted because it has been assigned to products
 entity.cart.account=account
 entity.cart.cartID=cartID
 entity.cart.cartItems=cartItems
@@ -215,6 +214,8 @@ entity.location.locationID=locationID
 entity.location.locationName=locationName
 entity.location.sellStockOnWeb=sellStockOnWeb
 entity.location.sellStockOnWebWholesale=sellStockOnWebWholesale
+entity.option.delete_success=The Option was successfully deleted.
+entity.option.delete_validatehasskus=This option cannot be deleted because it is associated with product SKUs.
 entity.option.optionCode=Option Code
 entity.option.optionDescription=Option Description
 entity.option.optionGroup=Option Group
@@ -223,6 +224,8 @@ entity.option.optionImage=Option Image
 entity.option.optionImage_hint=Select Associated Option Image to Upload (optional)
 entity.option.optionName=Option Name
 entity.option.sortOrder=Sort Order
+entity.optiongroup.delete_success=The Option Group was successfully deleted.
+entity.optiongroup.delete_validatehasoptions=This option group cannot be deleted because it contains options.
 entity.optiongroup.isImageGroup=Product Image Group
 entity.optiongroup.isImageGroup_hint=If this is selected, then any product with options from this group will have different images
 entity.optiongroup.optionGroupDescription=Option Group Description
@@ -289,6 +292,7 @@ entity.product.callToOrder=Call To Order
 entity.product.createdDateTime=Date Create
 entity.product.dateFirstReceived=dateFirstReceived
 entity.product.dateLastReceived=dateLastReceived
+entity.product.delete_success=The Product was successfully deleted.
 entity.product.filename=File Name
 entity.product.gender=gender
 entity.product.genderType=genderType
@@ -338,6 +342,7 @@ entity.producttype.allowDropship=Products may be Dropshipped
 entity.producttype.allowPreorder=Products may be Preordered
 entity.producttype.allowShipping=Products may be shipped
 entity.producttype.callToOrder=Allow Orders by Phone
+entity.producttype.delete_validateisassigned=This product type cannot be deleted because it has been assigned to a product and/or it has subtypes which must be moved or deleted first.
 entity.producttype.manufactureDiscontinued=Discontinued by Manufacturer
 entity.producttype.parentProductType=Parent Product Type
 entity.producttype.Products=Products
