--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Wed Mar 26 12:26:29 PST 2011
+#Tue Mar 29 17:48:20 PDT 2011
 admin.account=Account Manager
 admin.account.detail=Account Detail
 admin.account.list=Account Listing
@@ -88,20 +88,20 @@ admin.product.deleteproducttype_nav=Delete
 admin.product.deleteproducttype_success=The Product Type was sucessfully deleted
 admin.product.deletesku_confirm=Are you sure you want to delete this SKU?
 admin.product.detail=Product Detail
+admin.product.detail.tab.alternateimages=Alternate Images
+admin.product.detail.tab.customattributes=Custom Attributes
+admin.product.detail.tab.productdetails=Product Details
+admin.product.detail.tab.productpages=Product Pages
+admin.product.detail.tab.productsettings=Product Settings
 admin.product.detail.tab.skus=SKUs
 admin.product.detail.tab.webdescription=Web Description
-admin.product.detail.tab.productdetails=Product Details
-admin.product.detail.tab.productsettings=Product Settings
-admin.product.detail.tab.productpages=Product Pages
-admin.product.detail.tab.customattributes=Custom Attributes
-admin.product.detail.tab.alternateimages=Alternate Images
 admin.product.detailproducttype=Product Type Details
 admin.product.edit=Edit Product
 admin.product.editproducttype=Edit Product Type
 admin.product.list=View All Products
 admin.product.listproducttypes=View Product Types
-admin.product.noproducttypesdefined=No Product Types have been defined in the Site Manager
 admin.product.noproductpagesdefined=No Product Pages have been defined in the Site Manager
+admin.product.noproducttypesdefined=No Product Types have been defined in the Site Manager
 admin.product.productdetails=Product Details
 admin.product.productoptions=Product Options
 admin.product.productpages=Product Pages
@@ -122,12 +122,22 @@ admin.product.selectproductpages=Select Product Pages for Frontend Display
 admin.product.selectproducttype=Select Product Type
 admin.product.showbasicinfo=Show Basic Product Info
 admin.setting=Settings Manager
+admin.setting.createshippingmethod=Create Shipping Method
 admin.setting.dashboard=Settings Manager
+admin.setting.deleteshippingmethod=Delete Shipping Method
+admin.setting.deleteshippingmethod_confirm=Are you sure you want to delete this Shipping Method?
+admin.setting.deleteshippingmethod_nav=Delete
+admin.setting.deleteshippingmethod_success=Shipping Method Deleted
 admin.setting.detail=Global Settings
+admin.setting.detailshippingmethod=Shipping Method Detail
 admin.setting.edit=Edit Global Settings
 admin.setting.editpermissions=User Permissions
+admin.setting.editshippingmethod=Edit Shipping Method
+admin.setting.listshippingmethods=Shipping Methods
 admin.setting.save=Save Settings
 admin.setting.save_nav=Save
+admin.setting.saveshippingmethod=Save Shipping Method
+admin.setting.saveshippingmethod_nav=Save
 admin.vendor=Vendor Manager
 admin.vendor.dashboard=Vendor Dashboard
 entity.account.accountEmails=Account Emails
@@ -345,6 +355,7 @@ entity.productrelationship.product=product
 entity.productrelationship.productRelationshipID=productRelationshipID
 entity.productrelationship.relatedProduct=relatedProduct
 entity.productrelationship.relationshipType=relationshipType
+entity.producttype.Products=Products
 entity.producttype.allowBackorder=Products may be Backordered
 entity.producttype.allowDropship=Products may be Dropshipped
 entity.producttype.allowPreorder=Products may be Preordered
@@ -353,12 +364,11 @@ entity.producttype.callToOrder=Allow Orders by Phone
 entity.producttype.delete_validateisassigned=This product type cannot be deleted because it has been assigned to a product and/or it has subtypes which must be moved or deleted first.
 entity.producttype.manufactureDiscontinued=Discontinued by Manufacturer
 entity.producttype.parentProductType=Parent Product Type
-entity.producttype.Products=Products
-entity.producttype.productTypeName=Product Type Name
 entity.producttype.productTypeID=productTypeID
-entity.producttype.subProductTypes=subProductTypes
+entity.producttype.productTypeName=Product Type Name
 entity.producttype.showOnWeb=Sold on Retail Website
 entity.producttype.showOnWebWholesale=Sold on Wholesale Website
+entity.producttype.subProductTypes=subProductTypes
 entity.producttype.trackInventory=Track Inventory
 entity.profile.account=account
 entity.profile.profileID=profileID
@@ -389,13 +399,14 @@ entity.session.sessionID=sessionID
 entity.setting.settingID=settingID
 entity.setting.settingName=settingName
 entity.setting.settingValue=settingValue
-entity.shippingmethod.shippingMethodID=shippingMethodID
-entity.shippingmethod.shippingMethodName=shippingMethodName
-entity.shippingmethod.shippingMethodType=shippingMethodType
-entity.shippingmethod.shippingProviderGateway=shippingProviderGateway
-entity.shippingmethod.shippingProviderMethod=shippingProviderMethod
-entity.shippingrate.cost=cost
-entity.shippingrate.maxPrice=maxPrice
+entity.shippingmethod.delete_success=Shipping Method was saved successfully
+entity.shippingmethod.shippingMethodID=Shipping Method ID
+entity.shippingmethod.shippingMethodName=Shipping Method Name
+entity.shippingmethod.shippingMethodType=Shipping Method Type
+entity.shippingmethod.shippingProviderGateway=Shipping Provider Gateway
+entity.shippingmethod.shippingProviderMethod=Shipping Provider Method
+entity.shippingrate.cost=Cost
+entity.shippingrate.maxPrice=Max Price
 entity.shippingrate.maxWeight=maxWeight
 entity.shippingrate.minPrice=minPrice
 entity.shippingrate.minWeight=minWeight
@@ -502,6 +513,8 @@ entity.vendorskustock.vendor=vendor
 entity.vendorskustock.vendorSkuStockID=vendorSkuStockID
 frontend.account.detail=My Account
 frontend.account.edit=Edit Account
+frontend.cart.detail=Shopping Cart
+frontend.cart.detail.noitems=There are currently no items in your cart.
 frontend.checkout.detail=Checkout
 setting=Setting
 setting.account=Account
@@ -560,5 +573,3 @@ validator.uppercase={objectValue} must be upper case.
 validator.url={objectValue} is an invalid URL.
 validator.uuid={objectValue} is an invalid UUID.
 validator.zipCode={objectValue} is an invalid zip code.
-frontend.cart.detail=Shopping Cart
-frontend.cart.detail.noitems=There are currently no items in your cart.
