Finished basic UI for jQuery-driven  adding/removing new SKU's in product edit form.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -74,6 +74,9 @@ admin.product=Product Manager
 admin.product.altimages=Alternate Images
 admin.product.attributes=Custom Attributes
 admin.product.basicinfo=Basic Product Info
+admin.product.edit.addoption=Add Option
+admin.product.edit.addsku=Add SKU
+admin.product.edit.removesku=Remove SKU
 admin.product.categories=Categories
 admin.product.create=Create New Product
 admin.product.createproducttype=Add Product Type
