--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Tue Mar 29 17:48:20 PDT 2011
+#Wed Mar 30 08:32:48 PDT 2011
 admin.account=Account Manager
 admin.account.detail=Account Detail
 admin.account.list=Account Listing
@@ -129,11 +129,13 @@ admin.setting.deleteshippingmethod_confirm=Are you sure you want to delete this 
 admin.setting.deleteshippingmethod_nav=Delete
 admin.setting.deleteshippingmethod_success=Shipping Method Deleted
 admin.setting.detail=Global Settings
+admin.setting.detailintegration=Integration Setup
 admin.setting.detailshippingmethod=Shipping Method Detail
 admin.setting.edit=Edit Global Settings
 admin.setting.editpermissions=User Permissions
 admin.setting.editshippingmethod=Edit Shipping Method
-admin.setting.listshippingmethods=Shipping Methods
+admin.setting.listshippingmethods=List Shipping Methods
+admin.setting.listshippingmethods_nav=Shipping Methods
 admin.setting.save=Save Settings
 admin.setting.save_nav=Save
 admin.setting.saveshippingmethod=Save Shipping Method
