Added framework for shipping services.

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Wed Mar 30 08:32:48 PDT 2011
+#Thu Mar 31 09:34:57 PDT 2011
 admin.account=Account Manager
 admin.account.detail=Account Detail
 admin.account.list=Account Listing
@@ -130,12 +130,19 @@ admin.setting.deleteshippingmethod_nav=Delete
 admin.setting.deleteshippingmethod_success=Shipping Method Deleted
 admin.setting.detail=Global Settings
 admin.setting.detailintegration=Integration Setup
+admin.setting.detailpermissions=User Permissions
 admin.setting.detailshippingmethod=Shipping Method Detail
 admin.setting.edit=Edit Global Settings
-admin.setting.editpermissions=User Permissions
+admin.setting.editpermissions=Edit Permissions
 admin.setting.editshippingmethod=Edit Shipping Method
+admin.setting.listintegrationservices=Integration Services Listing
+admin.setting.listintegrationservices_nav=Integration Services
+admin.setting.listpaymentmethods=Payment Method Listing
+admin.setting.listpaymentmethods_nav=Payment Methods
 admin.setting.listshippingmethods=List Shipping Methods
 admin.setting.listshippingmethods_nav=Shipping Methods
+admin.setting.listshippingservices=Shipping Service Listing
+admin.setting.listshippingservices_nav=Configure Shipping Services
 admin.setting.save=Save Settings
 admin.setting.save_nav=Save
 admin.setting.saveshippingmethod=Save Shipping Method
