--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Sun Apr 03 13:37:39 PDT 2011
+#Sun Apr 03 16:03:35 PDT 2011
 admin.account=Account Manager
 admin.account.detail=Account Detail
 admin.account.list=Account Listing
@@ -132,9 +132,11 @@ admin.setting.detail=Global Settings
 admin.setting.detailintegration=Integration Setup
 admin.setting.detailpermissions=User Permissions
 admin.setting.detailshippingmethod=Shipping Method Detail
+admin.setting.detailshippingservice=Shipping Service Detail
 admin.setting.edit=Edit Global Settings
 admin.setting.editpermissions=Edit Permissions
 admin.setting.editshippingmethod=Edit Shipping Method
+admin.setting.editshippingservice=Configure Shipping Service
 admin.setting.listintegrationservices=Integration Services Listing
 admin.setting.listintegrationservices_nav=Integration Services
 admin.setting.listpaymentmethods=Payment Method Listing
@@ -148,6 +150,8 @@ admin.setting.save=Save Settings
 admin.setting.save_nav=Save
 admin.setting.saveshippingmethod=Save Shipping Method
 admin.setting.saveshippingmethod_nav=Save
+admin.setting.saveshippingservice=Save Shipping Service
+admin.setting.saveshippingservice_nav=Save
 admin.vendor=Vendor Manager
 admin.vendor.dashboard=Vendor Dashboard
 entity.account.accountEmails=Account Emails
@@ -413,7 +417,7 @@ entity.shippingmethod.delete_success=Shipping Method was saved successfully
 entity.shippingmethod.shippingMethodID=Shipping Method ID
 entity.shippingmethod.shippingMethodName=Shipping Method Name
 entity.shippingmethod.shippingMethodType=Shipping Method Type
-entity.shippingmethod.shippingProviderGateway=Shipping Provider Gateway
+entity.shippingmethod.shippingProvider=Shipping Provider
 entity.shippingmethod.shippingProviderMethod=Shipping Provider Method
 entity.shippingrate.cost=Cost
 entity.shippingrate.maxPrice=Max Price
