Added Countries Table data, and address zones to the setup

--- a/resourceBundles/en.properties
+++ b/resourceBundles/en.properties
@@ -1,5 +1,5 @@
 #Created by JInto - www.guh-software.de
-#Sun Apr 03 16:03:35 PDT 2011
+#Mon Apr 04 14:51:05 PDT 2011
 admin.account=Account Manager
 admin.account.detail=Account Detail
 admin.account.list=Account Listing
@@ -122,6 +122,7 @@ admin.product.selectproductpages=Select Product Pages for Frontend Display
 admin.product.selectproducttype=Select Product Type
 admin.product.showbasicinfo=Show Basic Product Info
 admin.setting=Settings Manager
+admin.setting.createaddresszone=Create Address Zone
 admin.setting.createshippingmethod=Create Shipping Method
 admin.setting.dashboard=Settings Manager
 admin.setting.deleteshippingmethod=Delete Shipping Method
@@ -137,6 +138,8 @@ admin.setting.edit=Edit Global Settings
 admin.setting.editpermissions=Edit Permissions
 admin.setting.editshippingmethod=Edit Shipping Method
 admin.setting.editshippingservice=Configure Shipping Service
+admin.setting.listaddresszones=Address Zone Listing
+admin.setting.listaddresszones_nav=Address Zones
 admin.setting.listintegrationservices=Integration Services Listing
 admin.setting.listintegrationservices_nav=Integration Services
 admin.setting.listpaymentmethods=Payment Method Listing
@@ -148,6 +151,7 @@ admin.setting.listshippingservices.servicedisplayname=Shipping Service
 admin.setting.listshippingservices_nav=Configure Shipping Services
 admin.setting.save=Save Settings
 admin.setting.save_nav=Save
+admin.setting.saveaddresszone_nav=Save
 admin.setting.saveshippingmethod=Save Shipping Method
 admin.setting.saveshippingmethod_nav=Save
 admin.setting.saveshippingservice=Save Shipping Service
@@ -192,6 +196,14 @@ entity.address.postalCode=postalCode
 entity.address.stateCode=stateCode
 entity.address.street2Address=street2Address
 entity.address.streetAddress=streetAddress
+entity.addresszone.addressZoneID=Address Zone ID
+entity.addresszone.addressZoneLocations=Address Zone Locations
+entity.addresszone.addressZoneName=Address Zone Name
+entity.addresszonelocation.addressZone=Address Zone
+entity.addresszonelocation.addressZoneLocationID=Address Zone Location ID
+entity.addresszonelocation.country=Country
+entity.addresszonelocation.postalCode=Postal Code
+entity.addresszonelocation.state=state
 entity.attribute.attributeClassType=attributeClassType
 entity.attribute.attributeHint=attributeHint
 entity.attribute.attributeID=attributeID
@@ -417,8 +429,8 @@ entity.shippingmethod.delete_success=Shipping Method was saved successfully
 entity.shippingmethod.shippingMethodID=Shipping Method ID
 entity.shippingmethod.shippingMethodName=Shipping Method Name
 entity.shippingmethod.shippingMethodType=Shipping Method Type
-entity.shippingmethod.shippingProvider=Shipping Provider
 entity.shippingmethod.shippingProviderMethod=Shipping Provider Method
+entity.shippingmethod.shippingprovider=Shipping Provider
 entity.shippingrate.cost=Cost
 entity.shippingrate.maxPrice=Max Price
 entity.shippingrate.maxWeight=maxWeight
@@ -427,14 +439,6 @@ entity.shippingrate.minWeight=minWeight
 entity.shippingrate.shippingMethod=shippingMethod
 entity.shippingrate.shippingRateID=shippingRateID
 entity.shippingrate.shippingZone=shippingZone
-entity.shippingzone.shippingZoneID=shippingZoneID
-entity.shippingzone.shippingZoneLocations=shippingZoneLocations
-entity.shippingzone.shippingZoneName=shippingZoneName
-entity.shippingzonelocation.country=country
-entity.shippingzonelocation.postalCode=postalCode
-entity.shippingzonelocation.shippingZone=shippingZone
-entity.shippingzonelocation.shippingZoneLocationID=shippingZoneLocationID
-entity.shippingzonelocation.state=state
 entity.sku.delete_success=The SKU was deleted successfully.
 entity.sku.delete_validateonesku=The SKU cannot be deleted because each product must have at least one SKU.
 entity.sku.imagePath=Image Path
